<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:stretchColumns="0,3,5">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textview1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="11"
                android:hint="циферки"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/sad"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textview2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="result"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/sad"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        >

        <Button
            android:id="@+id/button_dell_all"
            android:text="CE"
            android:textSize="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"
            android:padding="@dimen/padding_buttons"/>


    </TableRow>





    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >


        <Button
            android:layout_margin="1dp"
            android:id="@+id/button1"
            android:text="@string/button_name1"
            android:textSize="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"
            android:padding="@dimen/padding_buttons"

            />
        <Button
            android:layout_margin="1dp"
            android:id="@+id/button2"
            android:text="@string/button_name2"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"
            />
        <Button
            android:layout_margin="1dp"
            android:id="@+id/button3"
            android:text="@string/button_name3"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"/>

        <Button
            android:layout_margin="1dp"
            android:id="@+id/button_multiply"
            android:text="@string/button_multiply"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >


        <Button
            android:layout_margin="1dp"
            android:id="@+id/button4"
            android:text="@string/button_name4"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"
            />

        <Button
            android:layout_margin="1dp"
            android:id="@+id/button5"
            android:text="@string/button_name5"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"

            />
        <Button
            android:layout_margin="1dp"
            android:id="@+id/button6"
            android:text="@string/button_name6"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"/>

        <Button
            android:layout_margin="1dp"
            android:id="@+id/button_split"
            android:text="@string/button_to_split"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"/>
    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >


        <Button
            android:layout_margin="1dp"
            android:id="@+id/button7"
            android:text="@string/button_name7"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"/>
        <Button
            android:layout_margin="1dp"
            android:id="@+id/button8"
            android:text="@string/button_name8"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"/>
        <Button
            android:layout_margin="1dp"
            android:id="@+id/button9"
            android:text="@string/button_name9"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"/>
        <Button
            android:layout_margin="1dp"
            android:id="@+id/button_plus"
            android:text="@string/button_plus"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"/>


    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:layout_margin="1dp"
            android:id="@+id/button0"
            android:text="@string/button_name0"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"/>
        <Button
            android:layout_margin="1dp"
            android:id="@+id/button_point"
            android:text="@string/button_name_point"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"/>
        <Button
            android:layout_margin="1dp"
            android:id="@+id/button_minus"
            android:text="@string/button_name_minus"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"/>
        <Button
            android:layout_margin="1dp"
            android:id="@+id/button_equals"
            android:text="@string/button_name_equaly"
            android:textSize="25dp"
            android:padding="@dimen/padding_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_numm_button"
            />



    </TableRow>



</TableLayout>